--- a/assignments/course feedback/public/display.html
+++ b/assignments/course feedback/public/display.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Display Sorted Ratings</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Display Sorted Ratings</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Display Courses Sorted by Ratings</h1>
-  <a href="/display-data">View Ratings</a><br><br>
-  <a href="/login.html">Back to Login</a>
+    <nav>
+        <a href="/">Home</a>
+        <a href="faculty.html">Faculty View</a>
+    </nav>
+
+    <div class="centered-container">
+        <div class="table-box">
+            <h1>Display Courses Sorted by Ratings</h1>
+            <table>
+                <tr>
+                    <th>Course Name</th>
+                    <th>Course Code</th>
+                    <th>Faculty</th>
+                    <th>Rating</th>
+                </tr>
+                <tr>
+                    <td>Course A</td>
+                    <td>CSE101</td>
+                    <td>Dr. Smith</td>
+                    <td>4.8</td>
+                </tr>
+                <tr>
+                    <td>Course B</td>
+                    <td>CSE102</td>
+                    <td>Prof. Johnson</td>
+                    <td>4.5</td>
+                </tr>
+            </table>
+            <a href="/login.html">Back to Login</a>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2023 Feedback Portal. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
