--- a/assignments/course feedback/public/faculty.html
+++ b/assignments/course feedback/public/faculty.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Faculty View</title>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Faculty View</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Faculty Feedback View</h1>
