--- a/assignments/course feedback/public/login.html
+++ b/assignments/course feedback/public/login.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Login</h1>
-  <a href="student.html">Student Login</a> | <a href="faculty.html">Faculty Login</a>
+    <div class="centered-container">
+        <div class="login-box">
+            <h1>Login</h1>
+            <a href="student.html">Student Login</a> | <a href="faculty.html">Faculty Login</a>
+        </div>
+    </div>
 </body>
 </html>
